<resources>
    <string name="app_name">Orgs</string>
    <string name="str_add_new_product">Add new product</string>
    <string name="str_name">Name</string>
    <string name="str_desc">Description</string>
    <string name="str_price">Price</string>
    <string name="str_save">Save</string>
    <string name="str_image_delete">Image Delete</string>
    <string name="str_update">Update</string>
    <string name="str_image_item">Image Item</string>
    <string name="str_load_image">Load image</string>
    <string name="str_url_image">URL Image</string>
    <string name="str_register_products">Register Products</string>
    <string name="str_update_products">Update products</string>
    <string name="str_edit">Edit</string>
    <string name="str_delete">Delete</string>
    <string name="str_confirm_delete">Really wish delete?</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_detail">Detail</string>
    <string name="str_name_asc">Name asc</string>
    <string name="str_name_desc">Name desc</string>
    <string name="str_desc_asc">Desc asc</string>
    <string name="str_desc_desc">Desc desc</string>
    <string name="str_price_asc">Price asc</string>
    <string name="str_price_desc">Price desc</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_register_user">Register User</string>
    <string name="str_orgs_logo">Orgs Logo</string>
    <string name="str_login">Login</string>
    <string name="str_create_new_account">Create new Account</string>
    <string name="str_orgs">Orgs</string>
    <string name="str_password_invalid_or_not_registred">Invalid password or user not registered</string>
    <string name="str_error_on_authentication">Error on authentication</string>
    <string name="str_exit_app">Exit App</string>
    <string name="str_profile">Profile</string>
    <string name="str_search_user">Search User</string>
    <string name="str_user_not_found">User not found</string>
</resources>